# rprompt

./: Build.moon  Cargo.toml  README.md
install/: install.bash  install.fish  install.zsh
src/: amalgam.lua  lib_git.rs  lib_host.rs  lib_paths.rs  lib_terminfo.rs  main.rs
src/lua/: blocks.lua  main.lua  util.lua  venv.lua
src/moon/: blocks.moon  main.moon  util.moon  venv.moon
